syntax = "proto3";

package zeth_proto;

import "zeth/api/ec_group_messages.proto";

message VerificationKeyPGHR13 {
    Group2Point a = 1;
    Group1Point b = 2;
    Group2Point c = 3;
    Group2Point gamma = 4;
    Group1Point gamma_beta_g1 = 5;
    Group2Point gamma_beta_g2 = 6;
    Group2Point z = 7;
    string ic = 8;
}

// Contains the proof along with the public inputs
message ExtendedProofPGHR13 {
    Group1Point a = 1;
    Group1Point a_p = 2;
    Group2Point b = 3;
    Group1Point b_p = 4;
    Group1Point c = 5;
    Group1Point c_p = 6;
    Group1Point h = 7;
    Group1Point k = 8;
    string inputs = 9;
}
